--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
+    "bulma": "^0.8.0",
     "vue": "^2.5.2",
     "vue-my-photos": "^1.0.4",
     "vue-router": "^3.1.3"
