--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bulma": "^0.8.0",
     "vue": "^2.5.2",
     "vue-my-photos": "^1.0.4",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-simple-markdown": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
